[gd_scene load_steps=6 format=3 uid="uid://bre0ghlcmhf2d"]

[ext_resource type="Script" path="res://models/characters/gardian.gd" id="1_3vb7r"]
[ext_resource type="Texture2D" uid="uid://b16mujw4ig4kt" path="res://art/ennemy/Gardians.png" id="1_oyjaq"]
[ext_resource type="PackedScene" uid="uid://dsxy1lknn584o" path="res://models/shield.tscn" id="3_jq0l4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_si5gi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_oyjaq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u7eh2"]
radius = 100.02

[node name="Gardian" type="RigidBody2D" groups=["enemies"]]
mass = 0.001
gravity_scale = 0.0
script = ExtResource("1_3vb7r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_si5gi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 8)
shape = SubResource("CircleShape2D_u7eh2")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Shield" parent="." instance=ExtResource("3_jq0l4")]

[node name="TimerPV" type="Timer" parent="."]

[node name="TimerShield" type="Timer" parent="."]

[node name="LabelPv" type="Label" parent="."]
offset_left = 70.0
offset_top = 100.0
offset_right = 110.0
offset_bottom = 123.0
text = "PV :"

[node name="LabelPvNum" type="Label" parent="LabelPv"]
layout_mode = 0
offset_left = 30.0
offset_right = 70.0
offset_bottom = 23.0
text = "0
"

[node name="LabelShield" type="Label" parent="."]
offset_left = 70.0
offset_top = 120.0
offset_right = 110.0
offset_bottom = 143.0
text = "Shield :"

[node name="LabelShieldNum" type="Label" parent="LabelShield"]
layout_mode = 0
offset_left = 60.0
offset_right = 100.0
offset_bottom = 23.0
text = "0"

[connection signal="timeout" from="TimerPV" to="." method="_on_timer_pv_timeout"]
[connection signal="timeout" from="TimerShield" to="." method="_on_timer_shield_timeout"]
